hard-gists/95a2a749ceb47ad4eb1ff6d1f8d73c5c/run.log
=== Docker Run Log for 95a2a749ceb47ad4eb1ff6d1f8d73c5c ===
Started at: Mi 29. Okt 18:28:27 CET 2025

[2025-10-29 18:28:27] START: Running container for 95a2a749ceb47ad4eb1ff6d1f8d73c5c
[2025-10-29 18:28:28] SUCCESS: Container c773b51467d4e2e14578c60bf730b336f1faa01f2f7a0691e9a271b9de6f8e15 started for 95a2a749ceb47ad4eb1ff6d1f8d73c5c
=== Container logs for 95a2a749ceb47ad4eb1ff6d1f8d73c5c ===
  File "/snippet.py", line 321
    print hack_captcha(captcha)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 95a2a749ceb47ad4eb1ff6d1f8d73c5c ===
[2025-10-29 18:28:30] INFO: Container c773b51467d4e2e14578c60bf730b336f1faa01f2f7a0691e9a271b9de6f8e15 has stopped
